--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@xmzhou/rc-contextmenu",
+  "name": "@xmzhou/rc-contextmenu-demo",
   "version": "0.1.0",
   "description": "一个基于React的右击菜单组件",
   "module": "dist/index.js",
@@ -77,6 +77,7 @@
     "stylelint": "^14.9.1"
   },
   "dependencies": {
+    "@xmzhou/rc-contextmenu": "^0.1.0",
     "ahooks": "^3.7.11",
     "classnames": "^2.5.1"
   }
