--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
       "@commitlint/config-conventional"
     ]
   },
-  "homepage": "https://xmzhoudev1997.github.io/rc-contextmenu/index.html",
+  "homepage": "https://xmzhoudev1997.github.io/rc-contextmenu/dist/index.html",
   "repository": {
     "type": "git",
     "url": "https://github.com/xmzhoudev1997/rc-contextmenu"
